--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <!-- Load Styles -->
-    <link href="style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
     <!-- HTML Follows BEM naming conventions 
@@ -120,6 +120,6 @@ Write your message</textarea
     <footer class="page__footer">
       <p>&copy Light Up</p>
     </footer>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
